# de_e2e

./: .gitignore  readme.md
airflow_helm/: .terraform.lock.hcl  airflow-helm.tf  airflow_values.yaml  upgrade_images.sh
data_processing/: .gitignore  Dockerfile  build-docker.sh  dev.env.list  docker-compose.yaml  pyproject.toml  requirements.txt
data_processing/airflow/: airflow.cfg.template  webserver_config.py
data_processing/airflow/dags/: example-dag.py
data_processing/airflow/dags/imdb/: imdb_dag.py
data_processing/airflow/dags/imdb/helpers/: unload_data.py
data_processing/airflow/dags/imdb/sql/: best_in_year.sql  create_tables.sql  highest_rated.sql  popular_genres.sql
data_processing/airflow/dags/utils/: common.py  variables.py
data_processing/airflow/plugins/: readme.md
kind_cluster/: .terraform.lock.hcl  kind.tf  logs_volume.yaml  pv.yaml  pvc.yaml
kubernetes_namespace/: .terraform.lock.hcl  main.tf
pg_helm/: .terraform.lock.hcl  pg-helm.tf
