[tool.poetry]
name = "de-lifecycle"
version = "0.1.0"
description = ""
authors = ["mdrmuhaimin <muhammad.r.muhaimin@gmail.com>"]
readme = "README.md"
packages = [{include = "de-lifecycle"}]

[tool.poetry.dependencies]
python = "^3.9"
opendatasets = "^0.1.22"
kaggle = "^1.5.16"
pandas = "^2.0.3"
orjson = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"
kaggle = "^1.5.16"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
